Frontend de adjuntar evidencia
